chore: migrate service and replace template resources
